--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,16 +15,19 @@ dependencies:
   get: ^4.6.5
   equatable: ^2.0.5
   dartz: ^0.10.1
-
+  flutter_lints: ^2.0.0
+  json_to_model: ^3.2.4
+  http: ^0.13.5
+  file_picker: ^4.0.0
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
-  json_to_model: ^3.2.4
-  http: ^0.13.5
-  file_picker: ^4.0.0
+  build_runner: ^2.3.2
+  json_serializable: ^6.5.4
+  json_annotation: ^4.0.1
 
 
 flutter:
